# tzbot

./: .env  .env.example  README.md  data.db  pyproject.toml
app/: ai.py  config.py  db.py  main.py  models.py  storage.py
tzbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
